# srt-dubber

./: .gitignore  CMakeLists.txt  Dockerfile.windows-cross  LICENSE  README.md  main.cpp
.github/workflows/: build-windows.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/alan/: charter.md  history.md
.squad/agents/butch/: charter.md  history.md
.squad/agents/flood/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/richard/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/steven/: charter.md  history.md
.squad/casting/: registry.json
.squad/decisions/inbox/: butch-timing-race.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2025-04-14-wave1-complete.md  2025-04-14-wave2-complete.md  2026-04-14T15-30-00Z-audio-quality-fix.md  2026-04-14T15-35-00Z-device-select.md
.squad/orchestration-log/: 2026-04-14T15-30-00Z-butch.md  2026-04-14T15-35-00Z-butch.md
cmake/: windows-flags.cmake
cmake/toolchains/: mingw-w64.cmake
docs/: windows-dev.md
scripts/: build-windows.sh
src/: CMakeLists.txt
src/audio/: player.cpp  player.hpp  recorder.cpp  recorder.hpp
src/core/: project.cpp  project.hpp  resync.cpp  resync.hpp  types.hpp
src/ffmpeg/: assembler.cpp  assembler.hpp  processor.cpp  processor.hpp  types.hpp
src/srt/: parser.cpp  parser.hpp
src/tui/: app.cpp  app.hpp  screen_action.hpp
src/tui/screens/: assemble_screen.cpp  assemble_screen.hpp  recording_screen.cpp  recording_screen.hpp  review_screen.cpp  review_screen.hpp  session_screen.cpp  session_screen.hpp
